# software-quality-model

./: .gitignore  CMakeLists.txt  LICENSE  README.md
forms/: software-quality-model.ui
lib/: CMakeLists.txt
lib/include/: SEL.h
lib/src/: SEL.cc
resources/images/: app_icon.rc  resources.qrc
src/: main.cpp  software-quality-model.cpp  software-quality-model.h
